# lxcpc

./: .gitignore  configure.ac
doc/: cpc6128.txt
src/: 8255.c  Makefile.am  amstrad.h  crtc6845.c  gatearray.c  io.c  keyboard.c  main.c  psg.c  ram.c  rambanks.c  video.c
